Segundo commit ya finalizado

--- a/serverless-lab-26/Ebook/index.html
+++ b/serverless-lab-26/Ebook/index.html
@@ -550,7 +550,7 @@ document.addEventListener('DOMContentLoaded', function() {
   if (!form) return;
 
   // ¡Asegúrate de que este ENDPOINT sea el correcto de tu API Gateway!
-  const ENDPOINT = 'https://g2jytslnvh.execute-api.us-east-1.amazonaws.com/prod/ebook';
+  const ENDPOINT = 'https://inspd6ym1d.execute-api.us-east-1.amazonaws.com/prod/ebook';
 
   form.addEventListener('submit', async function(e) {
     e.preventDefault();
